--- a/assets/estilo/home.css
+++ b/assets/estilo/home.css
@@ -225,18 +225,15 @@ nav ul li a:hover {
 }
 
 #contador-carrinho {
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    background: var(--marrom-terra);
-    color: var(--branco-neve);
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
+  position: absolute;
+  top: -6px;
+  right: -10px;
+  background-color: var(--marrom-terra);
+  color: var(--branco-neve);
+  font-size: 0.75rem;
+  font-weight: 700;
+  padding: 2px 6px;
+  border-radius: 50%;
 }
 
 .carrinho-dropdown {
@@ -267,12 +264,12 @@ nav ul li a:hover {
     align-items: center;
     gap: 15px;
     padding: 10px 0;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid var(--cinza-pedra);
 }
 
 .item-carrinho img {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     object-fit: cover;
     border-radius: 4px;
 }
@@ -343,6 +340,20 @@ nav ul li a:hover {
 
 .btn-limpar:hover {
     background: #e60000;
+}
+
+.btn-remover {
+  cursor: pointer;
+  color: var(--branco-neve);
+  background-color: var(--marrom-terra);
+  border: none;
+  padding: 5px;
+  border-radius: 4px;
+}
+
+.btn-remover:hover {
+  background: #e60000;
+  transition: background 0.3s;
 }
 
 /* =============================================
