--- a/assets/estilo/login.css
+++ b/assets/estilo/login.css
@@ -8,8 +8,8 @@
 
 :root {
     --cor1:#83c716;
-    --cor2:#597729;
-    --cor3:#9aeba3;
+    --cor2:#3A6351;
+    --cor3:#A8C686;
 }
 
 * {
@@ -110,13 +110,13 @@ form > input[type=submit] {
     border-radius: 5px;
     border: none;
     color: white;
-    background-color: var(--cor1);
+    background-color: #59880f;
     font-size: 1em;
     cursor: pointer;
 }
 
 form > input[type=submit]:hover {
-    background-color: #83c716a9;
+    background-color: #6ba50ea9;
 }
 
 form > a.botao {
@@ -135,7 +135,7 @@ form > a.botao {
 }
 
 form > a.botao:hover {
-    background-color: #dafdba;
+    background-color: #bcdb9e;
 }
 
 form > a.botao > span {
