--- a/assets/estilo/media-query.css
+++ b/assets/estilo/media-query.css
@@ -3,7 +3,7 @@
 @media screen and (min-width: 768px ) and (max-width: 992px) { /* CONFIGURAÇÃO PARA TABLET */
 
     body {
-        background-image: linear-gradient(to top, #9aeba3,#597729);
+        background-image: linear-gradient(to top, #A8C686,#3A6351);
     }
 
     section#login {
@@ -26,7 +26,7 @@
 @media screen and (min-width: 992px) { /* CONFIGURAÇÃO PARA DESKTOP  */
     
     body {
-        background-image: linear-gradient(to top, #9aeba3, #597729);
+        background-image: linear-gradient(to top, #A8C686, #3A6351);
     }
 
     section#login {
