--- a/assets/estilo/perfil.css
+++ b/assets/estilo/perfil.css
@@ -1,3 +1,7 @@
+@charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 :root {
   --verde-folha: #3A6351;
   --verde-claro: #A8C686;
@@ -8,7 +12,8 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
+
   margin: 0;
   background: var(--bege-areia);
   color: var(--cinza-pedra);
