--- a/assets/estilo/editprod.css
+++ b/assets/estilo/editprod.css
@@ -113,13 +113,6 @@ button[type="submit"]:hover {
   color: var(--branco-neve);
 }
 
-#feedback {
-  margin-top: 20px;
-  text-align: center;
-  font-weight: bold;
-  color: var(--marrom-terra);
-}
-
 input[type="number"] {
   width: 59px;
 }
@@ -204,4 +197,24 @@ input[type="number"] {
   #preco {
     width: 55px;
   }
+}
+
+/* Feedback */
+.feedback {
+  position: fixed;
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%) translateY(100%);
+  background: var(--verde-folha);
+  color: white;
+  padding: 1rem 2rem;
+  border-radius: 8px;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  z-index: 1000;
+}
+
+.feedback.show {
+  transform: translateX(-50%) translateY(0);
+  opacity: 1;
 }
