--- a/assets/estilo/produtos.css
+++ b/assets/estilo/produtos.css
@@ -338,3 +338,18 @@ header {
     justify-content: center;
   }
 }
+
+.barra-pesquisa {
+  max-width: 400px;
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+}
+
+#input-pesquisa {
+  width: 100%;
+  padding: 10px 15px;
+  border: 2px solid var(--verde-folha);
+  border-radius: 25px;
+  font-size: 16px;
+}
