--- a/assets/estilo/editprod.css
+++ b/assets/estilo/editprod.css
@@ -13,11 +13,11 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: var(--bege-areia);
   margin: 0;
-  padding: 2rem;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  min-height: 100vh;
+  min-height: 80vh;
   overflow-x: hidden;
 }
 
@@ -29,7 +29,7 @@ body {
 form#form-editar-produto {
   background-color: var(--branco-neve);
   border-radius: 12px;
-  padding: 2rem;
+  padding: 1rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 600px;
@@ -117,7 +117,7 @@ input[type="number"] {
   width: 59px;
 }
 
-.btn-home {
+.btn-home,.btn-voltar {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -131,8 +131,8 @@ input[type="number"] {
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
-.btn-home:hover,
-.btn-home:focus {
+.btn-home:hover,.btn-voltar:hover,
+.btn-home:focus,.btn-voltar:focus {
   background-color: var(--marrom-terra);
   color: var(--branco-neve);
   transform: scale(1.1);
@@ -217,4 +217,18 @@ input[type="number"] {
 .feedback.show {
   transform: translateX(-50%) translateY(0);
   opacity: 1;
+}
+
+.btn-excluir {
+  background-color: #b32020;
+  color: white;
+  padding: 0.6rem 1rem;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.btn-excluir:hover {
+  background-color: #a11818;
 }
