--- a/assets/estilo/login.css
+++ b/assets/estilo/login.css
@@ -166,7 +166,7 @@ form > a.botao > span {
 /* Tipos de feedback usando SUA paleta */
 .feedback.sucesso {
   background: var(--cor2);
-  border-left: 5px solid #7B5E42;
+  border-left: 5px solid #F2E8CF;
   color: white;
 }
 
