--- a/assets/estilo/home.css
+++ b/assets/estilo/home.css
@@ -224,6 +224,7 @@ nav ul li a:hover {
   color: var(--branco-neve);
   cursor: pointer;
   font-size: 1.5rem;
+  height: 30px;
 }
 
 #contador-carrinho {
