organizando o código html e css

--- a/assets/estilo/cadastro.css
+++ b/assets/estilo/cadastro.css
@@ -180,6 +180,16 @@ label, span {
   }
 }
 
+@media (max-width: 1000px) {
+  header img {
+    max-width: 20%;
+    height: auto;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
+}
+
 /* ===============================
    MODAL DE FEEDBACK
 ================================== */
